--- a/Product-workflow/static/geral.css
+++ b/Product-workflow/static/geral.css
@@ -19,9 +19,19 @@ body{
 }
 
 .titulo-container{
+	color:#112a48;
+	font-weight: normal;
+}
+
+.container-produtos .titulo-container{
 	font-size:25px;
-	color:#2c3e50;
 	padding:40px 0 25px 40px;
+}
+
+.modal-item .titulo-container{
+	text-align: center;
+	font-size:21px;
+	padding:25px 0 5px;
 }
 
 .container-inputs{
@@ -140,4 +150,39 @@ body{
 .current-page{
 	background:#112a48;
 	color:white;
+}
+
+.modal-item{
+	width:400px;
+	height:400px;
+	background:white;
+	position:absolute;
+	top:-400px;
+	z-index:100;
+	box-shadow:0px 0px 2px #7f8c8d;
+	opacity: 0;
+	transition:0.4s all;
+}
+
+.modal-visible{
+	top:90px;
+	opacity: 1;
+}
+
+.icon-close{
+	width:25px;
+	height:25px;
+	background:white;
+	border-radius:100%;
+	position:absolute;
+	top:-10px;
+	right:-10px;
+	cursor:pointer;
+}
+
+.form{
+	width:90%;
+	height: auto;
+	margin:0 auto;
+	border:1px solid #000;
 }
